nearly working crawler